<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="title_apps">Apps</string>
    <string name="title_search">Search</string>
    <string name="title_notification">Notification</string>
    <string name="title_about">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_more">View More</string>
    <string name="recommendation_class">Recommendation Class</string>
    <string name="course_title">Course Title</string>
    <string name="content_description">content description</string>
    <string name="oleh_the_publisher">Oleh The Publisher</string>
    <string name="join_the_club">Join the Club</string>
    <string name="log_in">Log In</string>
    <string name="search_hint">Search Class</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">LOGIN</string>
    <string name="your_class">Your Class</string>
    <string name="continue_text">Continue</string>
</resources>